[gd_scene load_steps=18 format=3 uid="uid://cobe437juc2n7"]

[ext_resource type="Script" uid="uid://dou4jvx31e4vr" path="res://scripts/player/Player.gd" id="1_g2brh"]
[ext_resource type="Script" uid="uid://dqp0iw4nkxyn4" path="res://scripts/StatsComponent.gd" id="2_70d11"]
[ext_resource type="Texture2D" uid="uid://drwlrmy641yuw" path="res://assets/robinHood_ v1.1/robinHood_.png" id="2_g2brh"]
[ext_resource type="Script" uid="uid://v5q16ak0mw7r" path="res://scripts/HealthComponent.gd" id="2_qu4a1"]
[ext_resource type="Script" uid="uid://bni07m8mxcym6" path="res://scripts/player/PlayerFloatingWeapon.gd" id="3_4vejd"]
[ext_resource type="Texture2D" uid="uid://dnsb7bqpl7cdn" path="res://assets/robinHood_ v1.1/weapons_.png" id="3_dn4c7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2brh"]
atlas = ExtResource("2_g2brh")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t53lx"]
atlas = ExtResource("2_g2brh")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi2kj"]
atlas = ExtResource("2_g2brh")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cibgq"]
atlas = ExtResource("2_g2brh")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn4c7"]
atlas = ExtResource("2_g2brh")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vejd"]
atlas = ExtResource("2_g2brh")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws0vm"]
atlas = ExtResource("2_g2brh")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhr3r"]
atlas = ExtResource("2_g2brh")
region = Rect2(72, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_8nwgm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2brh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t53lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi2kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cibgq")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn4c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vejd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws0vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhr3r")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2brh"]
size = Vector2(12, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfdas"]
atlas = ExtResource("3_dn4c7")
region = Rect2(15.3141, 2.2379, 7.91379, 19.9823)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g2brh")

[node name="StatsComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_70d11")
attack = 20
critical_chance = 5
metadata/_custom_type_script = "uid://dqp0iw4nkxyn4"

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("body")]
unique_name_in_owner = true
script = ExtResource("2_qu4a1")
max_health = 50
body = NodePath("..")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_8nwgm")
animation = &"idle"
autoplay = "idle"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_g2brh")

[node name="FloatingWeapon" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("3_4vejd")
player = NodePath("..")

[node name="FWSprite" type="Sprite2D" parent="FloatingWeapon"]
unique_name_in_owner = true
scale = Vector2(0.85, 0.85)
texture = SubResource("AtlasTexture_mfdas")

[node name="FWTimer" type="Timer" parent="FloatingWeapon"]
unique_name_in_owner = true
autostart = true

[node name="FWArrowSpawnPosition" type="Marker2D" parent="FloatingWeapon"]
unique_name_in_owner = true
position = Vector2(4, 0)

[connection signal="timeout" from="FloatingWeapon/FWTimer" to="FloatingWeapon" method="_on_fw_timer_timeout"]
